--- a/src/app/Components/view/view.component.html
+++ b/src/app/Components/view/view.component.html
@@ -1,3 +1,7 @@
-<p>
-  view works!
-</p>
+<div class="col-sm-12 panel wd-panel">
+  <div id="main-view">
+  </div>
+  <div id="view-legend">
+  </div>
+</div>
+
