--- a/src/app/Components/CommonComponents/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/Components/CommonComponents/side-nav-bar/side-nav-bar.component.html
@@ -1,14 +1,19 @@
 <!-- Sidebar -->
-<div class="bg-light border-right" id="sidebar-wrapper">
-  <div class="list-group list-group-flush">
-    <a [routerLink]="['/home']" class="list-group-item list-group-item-action bg-light">Home</a>
-    <a [routerLink]="['/dashboard']" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-    <a [routerLink]="['/view']" class="list-group-item list-group-item-action bg-light">View</a>
-    <a [routerLink]="['/requests']" class="list-group-item list-group-item-action bg-light">Requests</a>
-    <a [routerLink]="['/manage']" class="list-group-item list-group-item-action bg-light">Manage</a>
-    <a [routerLink]="['/recouncile']" class="list-group-item list-group-item-action bg-light">Reconcile</a>
-    <a [routerLink]="['/sessions']" class="list-group-item list-group-item-action bg-light">Session & Messages</a>
-    <a [routerLink]="['/slamesssages']" class="list-group-item list-group-item-action bg-light">SLA Messages</a>
-    <a [routerLink]="['/clientcount']" class="list-group-item list-group-item-action bg-light">Clinet Count Graph</a>
+<div class="container-fluid">
+  <div class="sidebar" id="sidebar-wrapper">
+
+    <ul class="nav nav-sidebar">
+      <li class="sidelist"><a [routerLink]="['/home']">Home</a></li>
+      <li class="sidelist"><a [routerLink]="['/dashboard']" >Dashboard</a></li>
+      <li class="sidelist"><a [routerLink]="['/view']">View</a></li>
+      <li class="sidelist"><a [routerLink]="['/requests']">Requests</a></li>
+      <li class="sidelist"><a [routerLink]="['/manage']" >Manage</a></li>
+      <li class="sidelist"><a [routerLink]="['/recouncile']">Reconcile</a></li>
+      <li class="sidelist"><a [routerLink]="['/sessions']">Session & Messages</a></li>
+      <li class="sidelist"><a [routerLink]="['/slamesssages']">SLA Messages</a></li>
+      <li class="sidelist"><a [routerLink]="['/clientcount']" >Clinet Count Graph</a></li>
+
+    </ul>
+
   </div>
 </div>
