Block View Issue fixed

--- a/src/app/Components/requests/requests.component.html
+++ b/src/app/Components/requests/requests.component.html
@@ -1,3 +1,86 @@
-<p>
-  requests works!
-</p>
+<div class="row">
+  <div class="col-sm-6">
+    <div class="panel wd-panel">
+      <div class="panel-heading wd-panel-heading">
+        <a data-toggle="collapse" data-parent="#accordion" href="#">Client Routes</a> Filter: <input
+        class="form-control display-inline" type="text" ng-model="search.client">
+      </div>
+      <div class="panel-heading wd-panel-heading">
+        <a data-toggle="collapse" data-parent="#accordion" href="#">Client Routes</a> Filter: OMS-<input
+        class="form-control display-inline" type="text" ng-model="nodeFilter.nextNode">
+      </div>
+      <div class="panel-collapse collapse in">
+        <table class="wd-table">
+          <thead>
+          <tr>
+            <th>Client</th>
+            <th>Next Node</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr
+            ng-repeat="record in clientRoutesAll | filter:search | filter: nodeFilter | orderBy : 'client' | orderBy: 'nextNode'">
+            <td></td>
+            <td></td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-6">
+    <div class="row">
+      <div class="col-md-12">
+        <div id="main-request" class="panel wd-panel">
+          <form class="col-md-12 form-inline">
+            Client ID: <input class="form-control display-inline" type="text"  name="routeClientID" [(ngModel)]="routeClientID">
+            <input type="submit" value="GET ROUTES" class="btn btn-primary"  (click)="getRoutes()">
+          </form>
+          <div *ngIf="!routesDetailHide" id="request-results" class="get-routes">
+            <div>Client ID: {{routes.clientId}}</div>
+            <div>Endpoints: {{routes.endPoints}}</div>
+            <ul>
+              <li *ngFor="let route of routes.routes | keyvalue">{{route.key}} => {{route.value}}</li>
+            </ul>
+            <div class="row" ng-repeat="(key, value) in routes.routes">
+              <div>{{key}} , {{value}}</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <div id="main-request-history" class="panel wd-panel input-group">
+          <form ng-submit="getRoutesHistory()" class="col-md-12 form-inline">
+            Client ID: <input class="form-control display-inline" type="text" >
+            <input type="submit" value="GET HISTORY" class="btn btn-primary" style="float: right" >
+          </form>
+
+          <div ng-hide="routesHistory == null" id="request-results-history" class="get-routes">
+            <table class="wd-table">
+              <thead>
+              <tr>
+                <th>Client</th>
+                <th>Next Node</th>
+                <th>Update Time</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr ng-repeat="record in routesHistory | orderBy : '-updateTime' | limitTo : 10">
+                <!--<td>{{record["client"]}}</td>-->
+                <!--<td>OMS-{{record["nextNode"]}}</td>-->
+                <!--<td>{{record["updateTime"]}}</td>-->
+              </tr>
+              </tbody>
+            </table>
+          </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+</div>
