--- a/src/app/Components/CommonComponents/header-nav-bar/header-nav-bar.component.html
+++ b/src/app/Components/CommonComponents/header-nav-bar/header-nav-bar.component.html
@@ -20,20 +20,23 @@
               <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+              <li ng-show="!authenticated" >
+                <a href="#/login">Log-In</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </li>
+              <!--<li ng-show="authenticated" class="ng-hide">-->
+                <!--<a href ng-click="nav.logout()">Log-Out</a>-->
+              <!--</li>-->
+              <!--<li class="nav-item dropdown">-->
+                <!--<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+                  <!--Dropdown-->
+                <!--</a>-->
+                <!--<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">-->
+                  <!--<a class="dropdown-item" href="#">Action</a>-->
+                  <!--<a class="dropdown-item" href="#">Another action</a>-->
+                  <!--<div class="dropdown-divider"></div>-->
+                  <!--<a class="dropdown-item" href="#">Something else here</a>-->
+                <!--</div>-->
+              <!--</li>-->
             </ul>
           </div>
         </div>
