--- a/src/app/Components/dashboard/dashboard.component.css
+++ b/src/app/Components/dashboard/dashboard.component.css
@@ -1,6 +1,23 @@
 .wd-panel{
   width: 100%;
+  height: 100%;
 }
 .stat{
   display: inline;
+}
+
+#dashboard-blocks{
+  height: 100%;
+}
+
+#table-and-block{
+  padding-top: 15px;
+}
+
+.CONNECTED{
+  color: #1eff11;
+}
+
+#CLOSED{
+  background-color: #d43f3a;
 }
